--- a/src/main/resources/public/assets/css/utility/utility.css
+++ b/src/main/resources/public/assets/css/utility/utility.css
@@ -448,3 +448,45 @@ a .disabled{
 .draggable {
 	cursor: move;
 }
+
+/* log levels */
+.log_error {
+    padding: 4px 4px;
+    background: yellow;
+    border-radius: 4px;
+    margin-left: -4px;
+    color: #D8000C;
+background-color: #FFBABA;
+}
+
+.log_warn {
+    padding: 4px 4px;
+    background: yellow;
+    border-radius: 4px;
+    margin-left: -4px;
+    color: #9F6000;
+    background-color: #FEEFB3;
+}
+
+.log_info {
+    padding: 4px 4px;
+    background: yellow;
+    border-radius: 4px;
+    margin-left: -4px;
+    color: #00529B;
+    background-color: #BDE5F8;
+}
+
+.log_gray {
+    padding: 4px 4px;
+    background: yellow;
+    border-radius: 4px;
+    margin-left: -4px;
+    background-color: #d0d0d0;
+}
+
+/* Bootstrap forms */
+
+.form-control {
+    height: 36px;
+}
