--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -24,6 +24,7 @@
 
 <link href="/assets/css/site.css" rel="stylesheet" />
 <link href="/assets/css/react-datetime.css" rel="stylesheet" />
+<link href="/assets/css/utility/bootstrap.css" rel="stylesheet" />
 <link href="/assets/css/utility/style.css" rel="stylesheet" />
 
 <script src="/assets/js/build/vendor/util.js"></script>
