--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -27,9 +27,13 @@
 <link href="/assets/css/utility/bootstrap.css" rel="stylesheet" />
 <link href="/assets/css/utility/style.css" rel="stylesheet" />
 
-<script src="/assets/js/build/vendor/util.js"></script>
-<script src="/assets/js/build/vendor/jquery.js"></script>
-<script src="/assets/js/build/vendor/react.js"></script>
+<script th:if="${@environment.getActiveProfiles()[0] == 'development'}" src="/assets/js/build/vendor/util.js"></script>
+<script th:if="${@environment.getActiveProfiles()[0] == 'production'}" src="/assets/js/build/vendor/util.min.js"></script>
+
+<script src="/assets/js/build/vendor/jquery.min.js"></script>
+
+<script th:if="${@environment.getActiveProfiles()[0] == 'development'}" src="/assets/js/build/vendor/react.js"></script>
+<script th:if="${@environment.getActiveProfiles()[0] == 'production'}" src="/assets/js/build/vendor/react.min.js"></script>
 
 <script th:inline="javascript">
     var properties = {
@@ -47,7 +51,7 @@
 	</div>
 	
     <script src="/assets/lib/echarts/echarts.min.js"></script>
-    <script src="/assets/js/build/vendor/leaflet.js"></script>
+    <script src="/assets/js/build/vendor/leaflet.min.js"></script>
     
     <script th:if="${@environment.getActiveProfiles()[0] == 'production'}" src="/assets/js/build/utility/bundle.min.js"></script>
     <script th:if="${@environment.getActiveProfiles()[0] == 'development'}" src="/assets/js/build/utility/bundle.js"></script>
