--- a/src/main/resources/public/assets/css/utility/style.css
+++ b/src/main/resources/public/assets/css/utility/style.css
@@ -84,7 +84,7 @@
 
 ul.breadcrumbs-list {
 	padding: 8px 15px;
-	margin-bottom: 20px;
+	margin-bottom: 12px;
 	list-style: none;
 	background-color: #f5f5f5;
 	border-radius: 4px;
@@ -528,6 +528,10 @@ form.report-panel.form-inline .form-group {
   margin: 8px 12px 8px 0px;
 }
 
+form.report-panel fieldset {
+  margin: 0px 0px 5px 0px;
+}
+
 .reports > h3 {
   margin: 5px 0px 15px 0px;
   font-size: 25px;
@@ -537,6 +541,11 @@ form.report-panel.form-inline .form-group {
   font-weight: bolder;
   font-size: 1.3em;
 }
+
+.reports legend {
+  font-size: 1.1em;
+  margin-bottom: 8px;
+} 
 
 .reports > div.legend {
   /* mimic normal legend */
@@ -550,12 +559,26 @@ form.report-panel.form-inline .form-group {
   font-size: 1.1em;
 }
 
+.reports legend .summary-wrapper {
+  margin: 0px 5px;
+  vertical-align: baseline;
+}
+.reports legend .summary {
+  color: #777;
+  font-size: 0.8em;
+  margin: 0px 3px;
+}
+
 .report-panel .form-group > label {
   vertical-align: text-top;
+  font-weight: normal;
 }
 
 .dropdown.select-report button > span.text {
   width: 18em;
+}
+.dropdown.select-report .dropdown-menu {
+  width: 22em;  
 }
 
 .report-panel.form-inline .dropdown.select-source button > span.text {
@@ -571,12 +594,18 @@ form.report-panel.form-inline .form-group {
 .report-panel.form-horizontal .dropdown.select-timespan button > span.text {
   width: 10em;
 }
+.report-panel.form-horizontal .dropdown.select-timespan .dropdown-menu {
+  min-width: 12.1em;
+}
 
 .report-panel.form-inline .dropdown.select-cluster button > span.text {
   width: 7em;
 }
 .report-panel.form-horizontal .dropdown.select-cluster button > span.text {
   width: 10em;
+}
+.report-panel.form-horizontal .dropdown.select-cluster .dropdown-menu {
+  min-width: 12.1em;
 }
 
 .report-panel.form-inline .dropdown.select-cluster-group button > span.text {
@@ -585,13 +614,16 @@ form.report-panel.form-inline .form-group {
 .report-panel.form-horizontal .dropdown.select-cluster-group button > span.text {
   width: 10em;
 }
+.report-panel.form-horizontal .dropdown.select-cluster-group .dropdown-menu {
+  min-width: 12.1em;  
+}
 
 .report-panel .form-group .rdt {
   display: inline-block;
   vertical-align: middle;
 }
 .report-panel .form-group .rdt > input[type="text"] {
-  width: 6.5em;
+  width: 9.5em;
 }
 
 .chart.portal {
