Remove unused link from the main page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div>
-                <div class="navbar-header" style="margin-top: -15px;">
+                <div class="navbar-header">
                     <a class="navbar-brand" href="#"><img alt="DAIAD"
                         src="assets/images/utility/daiad-logo.svg" /></a>
                 </div>
@@ -51,7 +51,7 @@
         <div class="container" style="text-align: center;">
             <!-- Example row of columns -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <h2>@Home</h2>
 
                     <p>
@@ -62,17 +62,7 @@
                             role="button">Sign in &raquo;</a>
                     </p>
                 </div>
-                <div class="col-md-4">
-                    <h2 style="opacity: 0.5;">@Commons</h2>
-                    <p>
-                        <img alt="" src="assets/images/utility/Collaboration-100.png" style="opacity: 0.5;" />
-                    </p>
-                    <p>
-                        <a class="btn btn-default disabled" href="#"
-                            role="button">Sign in &raquo;</a>
-                    </p>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <h2>@Utility</h2>
                     <p>
                         <img alt="" src="assets/images/utility/Area Chart-100.png" />
