Add example of map and timeline components
Minor updates to DAIAD@utility updates.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="_csrf" th:content="${_csrf.token}" />
     <meta name="_csrf_header" th:content="${_csrf.headerName}" />
-    
+
+    <link rel="icon" href="/assets/images/utility/favicon.ico" />    
     <title>DAIAD</title>
 
     <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
