--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -10,6 +10,7 @@
     <meta name="_csrf" th:content="${_csrf.token}" />
     <meta name="_csrf_header" th:content="${_csrf.headerName}" />
     
+    <link rel="icon" href="/assets/images/utility/favicon.ico" />
     <title>DAIAD</title>
 
     <link href="/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
