Improve overview (i.e. canned) reports for measurements

--- a/src/main/resources/public/assets/css/utility/style.css
+++ b/src/main/resources/public/assets/css/utility/style.css
@@ -31,7 +31,7 @@
 	background-color: #fff;
 	position: inherit;
 	margin: 0 0 0 250px;
-	padding: 60px 25px 0px 30px;
+	padding: 55px 22px 0px 22px;
 	border-left: 1px solid #e7e7e7;
 	min-height: 1300px;
 }
@@ -496,6 +496,17 @@ a .disabled{
     text-align: center;
 }
 
+/* Bootstrap */
+
+.form-control {
+  height: 36px;
+}
+
+.panel-heading,
+.panel-body {
+  padding: 12px;
+}
+
 /* Reports (charts/panels) */
 
 form.report-panel {
@@ -537,25 +548,30 @@ form.report-panel fieldset {
   font-size: 25px;
 }
 
+.reports .panel-body h4 {
+  margin: 5px 0px 15px 0px;
+  font-size: 17px;
+} 
+
 .reports > h3 span.delimiter {
   font-weight: bolder;
 }
 
 .reports legend {
-  font-size: 1.1em;
+  font-size: 16px;
   margin-bottom: 8px;
 } 
 
 .reports > div.legend {
-  /* mimic normal legend */
-  font-size: 1.1em;
+  /* mimic a normal legend */
+  font-size: 16px;
   margin-bottom: 8px;
 }
 
 .reports > div.legend .select-dropdown .dropdown-menu li a,
 .reports > div.legend .select-dropdown .dropdown-menu .dropdown-header,
 .reports > div.legend .select-dropdown .btn .text {
-  font-size: 1.1em;
+  font-size: 16px;
 }
 
 .reports legend .summary-wrapper {
@@ -577,7 +593,7 @@ form.report-panel fieldset {
   width: 18em;
 }
 .dropdown.select-report .dropdown-menu {
-  width: 22em;  
+  width: 23.2em;  
 }
 
 .report-panel.form-inline .dropdown.select-source button > span.text {
@@ -632,8 +648,9 @@ form.report-panel fieldset {
   border: solid 1px silver;
 }
 
-.overview .panel .panel-title {
-  font-weight: bold;
+.overview .panel .panel-heading .panel-title {
+  font-weight: normal;
+  font-size: 18px;
 }
 
 .overview .panel-body h4 {
@@ -649,8 +666,8 @@ div.measurement-value {
 
 div.measurement-value > .wrapper {
   padding: 0px 0px;
-  min-height: 150px;
-  min-width: 10.5em;
+  min-height: 145px;
+  min-width: 10.4em;
   background: inherit;
 }
 
@@ -664,7 +681,6 @@ div.measurement-value .title {
 }
 
 div.measurement-value .subtitle {
-  font-size: 1.2rem;
   padding: 9px 5px 0px 5px;
 }
 
@@ -709,8 +725,8 @@ div.measurement-value .delta > .sign {
   vertical-align: text-top; 
 }
 
-.overview-utility .level > .measurement-value,
-.overview-utility .level > .chart {
+.reports.overview .unit-view > .measurement-value,
+.reports.overview .unit-view > .chart {
   display: block;
   float: left;
   border-style: solid;
@@ -719,11 +735,7 @@ div.measurement-value .delta > .sign {
   margin: 0px 5px 0px 0px;
 }
 
-.overview-utility .level > .chart {
-  width: 330px;
+.reports.overview .unit-view > .chart {
+  width: 370px;
   height: 230px;
-}
-
-.form-control {
-  height: 36px;
 }
