--- a/src/main/resources/public/assets/css/utility/style.css
+++ b/src/main/resources/public/assets/css/utility/style.css
@@ -758,3 +758,25 @@ div.measurement-value .delta > .sign {
   float: right;
 }      
 
+/* view-source:http://leafletjs.com/examples/choropleth-example.html */
+.map-choropleth-info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.map-choropleth-legend {
+    text-align: left;
+    line-height: 18px;
+    color: #555;
+}
+.map-choropleth-legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
